Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76487

"populate" do not work in "ListView" , when use "ApplicationWindow"

    XMLWordPrintable

Details

    • Windows
    • f806d64249c6e961ab12270d3a045e9980e19cf4 (qt/qtdeclarative/5.12)

    Description

      "populate" do not work in "ListView" , when use "ApplicationWindow".

      Attachments

        1. main.cpp
          0.9 kB
        2. main.qml
          0.4 kB
        3. main1.qml
          0.6 kB
        4. qml.qrc
          0.2 kB
        5. qtquickcontrols2.conf
          0.2 kB
        6. TheBug.png
          TheBug.png
          18 kB
        7. untitled29.pro
          1 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              qt.team.quick.subscriptions Qt Quick and Widgets Team
              nanguazhude ngz ngz
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes